--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,12 @@ body {
     align-items: center;
     padding: 2%;
     width: 100%;
-    height: 10%;
+    height: 80px;
     background-color: #fff;
+}
+
+.contatto.selected {
+    background-color: #e9ebeb;
 }
 
 .user {
@@ -70,7 +74,11 @@ body {
 }
 
 .contatto .time {
+    align-self: center;
     margin-left: auto;
+    margin-right: 2%;
+    color: #464444;
+    font-size: 14px;
 }
 
 
@@ -83,11 +91,10 @@ body {
     /* DEBUG:  */
     width: 80%;
     height: 90%;
-    /* border: solid 1px black; */
 }
 
 .app-container section header {
-    height: 10%;
+    height: 75px;
 }
 
 .app-container main {
@@ -126,7 +133,8 @@ body {
 .app-container .contacts-container .notifications {
     display: flex;
     align-items: center;
-    padding: 4% 2%;
+    min-height: 75px;
+    padding: 0 2%;
     background-color: #8edafc;
 }
 
@@ -146,8 +154,9 @@ body {
 }
 
 .search-box {
+    padding: 8px 2%;
+    height: 46px;
     background-color: #f5f1f1;
-    padding: 2%;
 }
 
 .search {
